--- a/lucrare/0-abstract.tex
+++ b/lucrare/0-abstract.tex
@@ -2,20 +2,20 @@
 
 \begin{abstract}{romanian}
 
-  Computerele moderne folosesc tehnici de optimizare precum \emph{executie
-  out-of-order} si \emph{branch prediction}. \emph{Meltdown} si \emph{Spectre}
-  sunt doua atacuri care exploateaza efectele secundare aparute la nivel
-  microarhitectural in urma optimizarilor mentionate. Prin intermediul acestora
-  un atacator poate citi date private din zone arbitrare din memorie, fara
-  privilegii si fara a exploata niciun bug de natura software. \emph{Intel},
-  \emph{AMD} si \emph{ARM} au fost fortate in urma divulgarii acestor atacuri
-  sa isi schimbe designul procesoarelor in incercarea de a mitiga
-  vulnerabilitatile la nivel hardware. In ciuda solutiilor implementate, la
-  jumatatea anului 2022, \emph{Spectre} afecteaza in continure majoritatea
-  computerelor din lumea intreaga si ramane un pericol pentru utilizatori si un
-  subiect de mare interes pentru cercetatori. In aceasta lucrare vor fi
-  prezentate particularitatile celor doua atacuri, si o implementare
-  demonstrativa a unui atac de tip \emph{Spectre}.
+  Computerele moderne folosesc tehnici de optimizare precum \emph{execuție
+  out-of-order} și \emph{branch prediction}. \emph{Meltdown} și \emph{Spectre}
+  sunt două atacuri care exploatează efectele secundare apărute la nivel
+  microarhitectural în urma optimizărilor menționate. Prin intermediul acestora
+  un atacator poate citi date private din zone arbitrare din memorie, fară
+  privilegii și fară a exploata niciun bug de natură software. \emph{Intel},
+  \emph{AMD} și \emph{ARM} au fost forțate în urma divulgării acestor atacuri
+  să își schimbe designul procesoarelor în încercarea de a mitiga
+  vulnerabilitățile la nivel hardware. În ciuda soluțiilor implementate, la
+  jumătatea anului 2022, \emph{Spectre} afectează în continure majoritatea
+  computerelor din lumea întreagă și rămâne un pericol pentru utilizatori și un
+  subiect de mare interes pentru cercetători. În această lucrare vor fi
+  prezentate particularitățile celor două atacuri, și o implementare
+  demonstrativă a unui atac de tip \emph{Spectre}.
 
 \end{abstract}
 
