--- a/lucrare/bibliography.bib
+++ b/lucrare/bibliography.bib
@@ -262,3 +262,31 @@
   year={2009},
   publisher={ACM New York, NY, USA}
 }
+
+@misc{file_locks,
+  title={File Locks},
+  url={https://www.gnu.org/software/libc/manual/html_node/File-Locks.html},
+  note={Accesat: 15.05.2022},
+}
+
+@misc{covert_channel,
+  title={Covert Channel: The Hidden Network},
+  url={https://www.hackingarticles.in/covert-channel-the-hidden-network/},
+  note={Accesat: 15.05.2022},
+}
+
+@misc{rop_figure,
+  title={Call Stack Layout},
+  url={https://commons.wikimedia.org/w/index.php?curid=1956587},
+  year={2007},
+  author={R. S. Shaw},
+}
+
+@misc{amd_response,
+  title={AMD releases response to Meltdown and Spectre exploits},
+  url={https://www.overclock3d.net/news/cpu_mainboard/amd_releases_response_to_meltdown_and_spectre_exploits/1},
+  year={2018},
+  author={Mark Campbell},
+  note={Accesat: 15.05.2022},
+}
+
